# mlx-turboquant

./: .gitignore  README.md  profile_memory.py  profile_memory_long.py  pyproject.toml
benchmarks/: bench_long_context.py
docs/plans/: 2026-03-30-chat-and-api-server.md
src/mlx_turboquant/: __init__.py  _session.py  cache.py  chat.py  patch.py  server.py
src/mlx_turboquant/metal/: fused_decode.py
tests/: test_cache.py  test_chat.py  test_fused_decode.py  test_server.py  test_session.py
